--- a/Warehouse/App.xaml
+++ b/Warehouse/App.xaml
@@ -3,4 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Warehouse"
              StartupUri="Login.xaml">
+    <Application.Resources>
+        <ResourceDictionary Source="Themes/DarkTheme.xaml"/>
+    </Application.Resources>
 </Application>
