--- a/Warehouse/Login.xaml
+++ b/Warehouse/Login.xaml
@@ -5,19 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Warehouse"
         mc:Ignorable="d"
-        Title="Login" Height="248.148" Width="264.889" ResizeMode="NoResize" Background="LightGray">
+        Title="Login" Height="248.148" Width="264.889" ResizeMode="NoResize">
     <Grid>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <StackPanel Orientation="Horizontal">
-                <Label Content="Логин"/>
-                <TextBox x:Name="TBlogin" Width="100" Margin="7,0,0,0"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,2,0,2">
-                <Label Content="Пароль"/>
-                <TextBox x:Name="TBpass" Width="100"/>
-            </StackPanel>
-            <Button x:Name="BtnLogin" Content="Вход" Margin="10" Click="BtnLogin_Click"/>
-            <Button x:Name="BtnReg" Content="Регистрация" Click="BtnReg_Click"/>
+            <TextBox x:Name="TBlogin" Width="150" Height="30" FontSize="20" Margin="0,0,0,2" Text="Логин"/>
+            <TextBox x:Name="TBpass" Width="150" Height="30" FontSize="20" Text="Пароль"/>
+            <Button x:Name="BtnLogin" Content="Вход" FontSize="18" Margin="10" Click="BtnLogin_Click"/>
+            <Button x:Name="BtnReg" FontSize="18" Content="Регистрация" Click="BtnReg_Click"/>
         </StackPanel>
     </Grid>
 </Window>
