--- a/Warehouse/Registration.xaml
+++ b/Warehouse/Registration.xaml
@@ -5,23 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Warehouse"
         mc:Ignorable="d"
-        Title="Registration" Height="248.089" Width="262.173" Background="LightGray">
+        Title="Registration" Height="248.089" Width="262.173">
     <Grid>
-    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        <StackPanel Orientation="Horizontal">
-            <Label Content="ФИО"/>
-            <TextBox x:Name="TBfio" Width="100" Margin="14,0,0,0"/>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBox x:Name="TBfio" Width="100" Height="30" FontSize="18" Text="ФИО"/>
+            <TextBox x:Name="TBlogin" Width="100" Height="30" FontSize="18" Margin="0,2,0,2" Text="Логин"/>
+            <TextBox x:Name="TBpass" Width="100" Height="30" FontSize="18" Text="Пароль"/>
+            <Button x:Name="BtnOK" Content="ОК" FontSize="16" Margin="10" Click="BtnOK_Click"/>
+            <Button x:Name="BtnCancel" Content="Отмена" FontSize="16" Click="BtnCancel_Click"/>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="0,2,0,2">
-            <Label Content="Логин"/>
-            <TextBox x:Name="TBlogin" Width="100" Margin="7,0,0,0"/>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Пароль"/>
-            <TextBox x:Name="TBpass" Width="100"/>
-        </StackPanel>
-        <Button x:Name="BtnOK" Content="ОК" Margin="10" Click="BtnOK_Click"/>
-        <Button x:Name="BtnCancel" Content="Отмена" Click="BtnCancel_Click"/>
-    </StackPanel>
     </Grid>
 </Window>
