--- a/Warehouse/App.xaml
+++ b/Warehouse/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:Warehouse"
              StartupUri="Login.xaml">
     <Application.Resources>
-        <ResourceDictionary Source="Themes/DarkTheme.xaml"/>
+        <ResourceDictionary Source="darktheme.xaml"/>
     </Application.Resources>
 </Application>
