--- a/Warehouse/MainWindow.xaml
+++ b/Warehouse/MainWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="Warehouse.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Warehouse"
+        xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="Warehouse.MainWindow"
         mc:Ignorable="d"
-        Title="Склад" Height="450" Width="800">
-
+        Title="Склад" Height="450" Width="800"
+        >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="330*"/>
